--- a/styles/partials/_project.scss
+++ b/styles/partials/_project.scss
@@ -7,6 +7,7 @@
     flex-direction: row;
     background: $bg-primary;
     color: $text-primary;
+    overflow-x: hidden;
 
     h3 {
       margin-top: 40px;
@@ -104,7 +105,7 @@
           }
 
           img {
-            width: 100%;
+            width: calc(100% - 4px);
             margin: 0;
             border-radius: 8px;
             border: 2px solid $accent-three-light;
